adds character select

--- a/index.html
+++ b/index.html
@@ -21,6 +21,13 @@
             <div class="row character-row" id="characters"></div>
         </div>
 
+        <div class="row">
+            <div class="col-md-12">
+                <h2>Choose Your Enemy</h2>
+            </div>
+            <div class="row character-row" id="enemies"></div>
+        </div>
+
 
         <script src="http://code.jquery.com/jquery-3.3.1.min.js"integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
         <script src="assets/javascript/game.js"></script>
