--- a/index.html
+++ b/index.html
@@ -3,38 +3,48 @@
     <head>
         <title>RPG</title>
 
-        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-        <link rel="stylesheet" type="text/css" src="assets/css/style.css">
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous" />
+        <link rel="stylesheet" type="text/css" href="assets/css/style.css" />
     </head>
+
     <body>
-
-        <div class="row">
-            <div class="col-md-12">
-                <h1>Role Playing Game</h1>
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col-md-12">
+                    <h1>Role Playing Game</h1>
+                </div>
             </div>
         </div>
 
-        <div class="row">
-            <div class="col-md-12">
-                <h2 id="player-row">Choose Your Player</h2>
-            </div>
-            <div class="row character-row" id="characters"></div>
-        </div>
+        <div class="container">
 
-        <div class="row enemy-row hidden">
-            <div class="col-md-12">
-                <h2>Choose an Enemy</h2>
+            <div class="row hero-row">
+                <div class="col-md-12">
+                    <h2 id="player-row">Choose Your Player</h2>
+                </div>
+                <div class="row character-row" id="characters"></div>
             </div>
-            <div class="row character-row" id="enemies"></div>
-        </div>
 
-        <button class="hidden" id="fight-button">Fight</button>
-
-        <div class="row defender-row hidden">
-            <div class="col-md-12">
-                <h2>Your Enemy</h2>
+            <div class="row enemy-row hidden">
+                <div class="col-md-12">
+                    <h2>Choose an Enemy</h2>
+                </div>
+                <div class="row character-row" id="enemies"></div>
             </div>
-            <div class="row character-row" id="defender"></div>
+
+            <div class="row damage-bar">
+                <button class="hidden" id="fight-button">Fight</button>
+                <h2 class="hidden damage" id="hero-damage"></h2>
+                <h2 class="hidden damage" id="defender-damage"></h2>
+            </div>
+
+            <div class="row defender-row hidden">
+                <div class="col-md-12">
+                    <h2>Your Enemy</h2>
+                </div>
+                <div class="row character-row" id="defender"></div>
+            </div>
+
         </div>
 
 
