--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>RPG</title>
+        <title>Battle of the Bands</title>
 
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous" />
+        <link href="https://fonts.googleapis.com/css?family=New+Rocker" rel="stylesheet" />
         <link rel="stylesheet" type="text/css" href="assets/css/style.css" />
     </head>
 
@@ -11,7 +12,7 @@
         <div class="container-fluid">
             <div class="row">
                 <div class="col-md-12">
-                    <h1>Role Playing Game</h1>
+                    <h1>Battle of the Bands</h1>
                 </div>
             </div>
         </div>
@@ -20,23 +21,25 @@
 
             <div class="row hero-row">
                 <div class="col-md-12">
-                    <h2 id="player-row">Choose Your Player</h2>
+                    <h2 id="player-row">Choose Your Band</h2>
                 </div>
                 <div class="row character-row" id="characters"></div>
             </div>
 
+            <div class="row damage-bar">
+                <button class="hidden" id="fight-button"></button>
+                <h2 class="hidden damage" id="hero-damage"></h2>
+                <h2 class="hidden damage" id="defender-damage"></h2>
+            </div>
+
             <div class="row enemy-row hidden">
                 <div class="col-md-12">
-                    <h2>Choose an Enemy</h2>
+                    <h2>Choose an Opponent</h2>
                 </div>
                 <div class="row character-row" id="enemies"></div>
             </div>
 
-            <div class="row damage-bar">
-                <button class="hidden" id="fight-button">Fight</button>
-                <h2 class="hidden damage" id="hero-damage"></h2>
-                <h2 class="hidden damage" id="defender-damage"></h2>
-            </div>
+
 
             <div class="row defender-row hidden">
                 <div class="col-md-12">
