adds random sticker for damage and red x's

--- a/index.html
+++ b/index.html
@@ -36,10 +36,10 @@
                     <div class="row character-row" id="hero"></div>
                 </div>
                 <div class="col-md-9">
-                    <p class="hidden damage sticker1">
+                    <p class="hidden damage hero-damage-container sticker1">
                         <span class="hero-damage"></span>
                     </p>
-                    <p class="hidden dead-damage sticker2">
+                    <p class="hidden dead-damage dead-damage-container sticker2">
                         <span class="dead-defender-damage"></span>
                     </p>
                 </div>
@@ -54,14 +54,14 @@
             </div>
 
             <div class="row defender-row hidden">
-                <div class="col-md-3" id="live-defender">
+                <div class="col-md-3 defender-column" id="live-defender">
                     <h2 class="identifier sticker3">
                         <span id="defender-row-text">Opponent</span>
                     </h2>
                     <div class="row character-row" id="defender"></div>
                 </div>
-                <div class="col-md-9">
-                    <p class="hidden damage sticker2">
+                <div class="col-md-9 defender-column">
+                    <p class="hidden damage defender-damage-container sticker2">
                         <span class="defender-damage"></span>
                     </p>
                 </div>
