adds reset button

--- a/index.html
+++ b/index.html
@@ -49,6 +49,11 @@
                 <div class="col-md-2">
                     <button class="hidden" id="fight-button"></button>
                 </div>
+
+                <div class="col-md-2">
+                    <button class="hidden" id="reset-button">Rock again?</button>
+                </div>
+
                 <div class="col-md-10">
                 </div>
             </div>
@@ -75,6 +80,7 @@
                 </div>
                 <div class="row character-row" id="enemies"></div>
             </div>
+
 
         </div>
 
