adds audio to html page to work into play later

--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
         <div class="container-fluid">
             <div class="row">
                 <div class="col-md-12">
-                    <h1>Battle of the Bands</h1>
+                    <h1 class="sticker3">
+                        <span id="title-text">Battle of the Bands</span>
+                    </h1>
                 </div>
             </div>
         </div>
@@ -83,6 +85,15 @@
 
 
         </div>
+
+        <div id="song-container">
+            <audio id="#the-wonders-song" src='assets/audio/the-wonders.mp3'></audio>
+            <audio id="#sex-bob-omb-song" src='assets/audio/sex-bob-omb.mp3'></audio>
+            <audio id="#blues-brothers-song" src='assets/audio/blues-brothers.mp3'></audio>
+            <audio id="#otis-day-song" src='assets/audio/otis-day-and-the-knights.mp3'></audio>
+        </div>
+
+
 
 
         <script src="http://code.jquery.com/jquery-3.3.1.min.js"integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
