--- a/index.html
+++ b/index.html
@@ -10,89 +10,93 @@
 
     <body>
         <div class="container-fluid">
-            <div class="row">
+            <div class="header row">
                 <div class="col-md-12">
                     <h1 class="sticker3">
                         <span id="title-text">Battle of the Bands</span>
                     </h1>
                 </div>
             </div>
-        </div>
 
-        <div class="container">
 
-            <div class="row select-row">
-                <div class="col-md-12">
-                    <h2 class="identifier sticker1">
-                        <span id="character-row-text">Choose Your Band</span>
-                    </h2>
+            <div class="container">
+
+                <div class="row select-row">
+                    <div class="col-md-12">
+                        <h2 class="identifier sticker1">
+                            <span id="character-row-text">Choose Your Band</span>
+                        </h2>
+                    </div>
+                    <div class="row character-row" id="characters"></div>
                 </div>
-                <div class="row character-row" id="characters"></div>
+
+                <div class="row hero-row hidden">
+                    <div class="col-md-3">
+                        <h2 class="identifier sticker2">
+                            <span id="hero-row-text">Your Hero</span>
+                        </h2>
+                        <div class="row character-row" id="hero"></div>
+                    </div>
+                    <div class="col-md-9">
+                        <p class="hidden damage hero-damage-container sticker1">
+                            <span class="hero-damage"></span>
+                        </p>
+                        <p class="hidden dead-damage dead-damage-container sticker2">
+                            <span class="dead-defender-damage"></span>
+                        </p>
+                    </div>
+                </div>
+
+                <div class="row damage-bar">
+                    <div class="col-md-2">
+                        <button class="hidden" id="fight-button"></button>
+                    </div>
+
+                    <div class="col-md-2">
+                        <button class="hidden" id="reset-button">Rock again?</button>
+                    </div>
+
+                    <div class="col-md-10">
+                    </div>
+                </div>
+
+                <div class="row defender-row hidden">
+                    <div class="col-md-3 defender-column" id="live-defender">
+                        <h2 class="identifier sticker3">
+                            <span id="defender-row-text">Opponent</span>
+                        </h2>
+                        <div class="row character-row" id="defender"></div>
+                    </div>
+                    <div class="col-md-9 defender-column">
+                        <p class="hidden damage defender-damage-container sticker2">
+                            <span class="defender-damage"></span>
+                        </p>
+                    </div>
+                </div>
+
+                <div class="row enemy-row hidden">
+                    <div class="col-md-12">
+                        <h2 class="identifier sticker4">
+                            <span id="enemy-row-text">Choose Your Opponent</span>
+                        </h2>
+                    </div>
+                    <div class="row character-row" id="enemies"></div>
+                </div>
+
             </div>
 
-            <div class="row hero-row hidden">
-                <div class="col-md-3">
-                    <h2 class="identifier sticker2">
-                        <span id="hero-row-text">Your Hero</span>
-                    </h2>
-                    <div class="row character-row" id="hero"></div>
-                </div>
-                <div class="col-md-9">
-                    <p class="hidden damage hero-damage-container sticker1">
-                        <span class="hero-damage"></span>
-                    </p>
-                    <p class="hidden dead-damage dead-damage-container sticker2">
-                        <span class="dead-defender-damage"></span>
-                    </p>
-                </div>
+            <div class="footer row">
+                <button id="mute">Mute</button>
             </div>
-
-            <div class="row damage-bar">
-                <div class="col-md-2">
-                    <button class="hidden" id="fight-button"></button>
-                </div>
-
-                <div class="col-md-2">
-                    <button class="hidden" id="reset-button">Rock again?</button>
-                </div>
-
-                <div class="col-md-10">
-                </div>
-            </div>
-
-            <div class="row defender-row hidden">
-                <div class="col-md-3 defender-column" id="live-defender">
-                    <h2 class="identifier sticker3">
-                        <span id="defender-row-text">Opponent</span>
-                    </h2>
-                    <div class="row character-row" id="defender"></div>
-                </div>
-                <div class="col-md-9 defender-column">
-                    <p class="hidden damage defender-damage-container sticker2">
-                        <span class="defender-damage"></span>
-                    </p>
-                </div>
-            </div>
-
-            <div class="row enemy-row hidden">
-                <div class="col-md-12">
-                    <h2 class="identifier sticker4">
-                        <span id="enemy-row-text">Choose Your Opponent</span>
-                    </h2>
-                </div>
-                <div class="row character-row" id="enemies"></div>
-            </div>
-
 
         </div>
 
         <div id="song-container">
-            <audio id="#the-wonders-song" src='assets/audio/the-wonders.mp3'></audio>
-            <audio id="#sex-bob-omb-song" src='assets/audio/sex-bob-omb.mp3'></audio>
-            <audio id="#blues-brothers-song" src='assets/audio/blues-brothers.mp3'></audio>
-            <audio id="#otis-day-song" src='assets/audio/otis-day-and-the-knights.mp3'></audio>
+            <audio id="the-wonders-song" src='assets/audio/the-wonders.mp3'></audio>
+            <audio id="sex-bob-omb-song" src='assets/audio/sex-bob-omb.mp3'></audio>
+            <audio id="blues-brothers-song" src='assets/audio/blues-brothers.mp3'></audio>
+            <audio id="otis-day-song" src='assets/audio/otis-day-and-the-knights.mp3'></audio>
         </div>
-
 
         <script src="https://code.jquery.com/jquery-3.3.1.js" integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60=" crossorigin="anonymous"></script>
         <script src="assets/javascript/game.js"></script>
